--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   carousel_slider: ^5.1.1
   awesome_notifications: ^0.10.1
   share_plus: ^11.1.0
+  table_calendar: ^3.2.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/animacoes/
+    - assets/imgs/
   #   - assets/images/
   #   - images/a_dot_ham.jpeg
 
